--- a/js-test/test.html
+++ b/js-test/test.html
@@ -5,8 +5,8 @@
     });       
 </script>
 
-<link rel="stylesheet" href="node_modules/qunitjs/qunit/qunit.css">
-<script src="node_modules/qunitjs/qunit/qunit.js"></script>
+<link rel="stylesheet" href="../node_modules/qunitjs/qunit/qunit.css">
+<script src="../node_modules/qunitjs/qunit/qunit.js"></script>
 
 <div id="qunit"></div>
 
