Extract ng-http-client-helper

--- a/js-test/test.html
+++ b/js-test/test.html
@@ -8,6 +8,7 @@
             "../node_modules/rxjs/bundles/rxjs.umd.js",
             "../node_modules/@angular/core/bundles/core.umd.js",
             "../node_modules/@angular/common/bundles/common-http.umd.js",
+            "../experiments/ng-http-helper-fixture.js",
             "../experiments/ng-http-client-fixture.js"
         );
     }
